<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/auth_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_type"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/auth_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_id"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/auth_token"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_token"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

</LinearLayout>
