<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.oubeichen.oauth_test_client.MainActivity" >

    <Button
        android:id="@+id/button_apiok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_vk"
        android:layout_alignParentRight="true"
        android:layout_marginRight="46dp"
        android:text="@string/login_apiok" />

    <TextView
        android:id="@+id/log_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/default_log"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_vk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/log_text"
        android:layout_below="@+id/log_text"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="53dp"
        android:text="@string/login_vk" />

</RelativeLayout>